--- a/students/jingwan/.gitignore
+++ b/students/jingwan/.gitignore
@@ -402,3 +402,4 @@ zsdoc/data
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode,vim,macos,linux,zsh
 
 my_settings.py
+users/mymodules.py
